# AstroConst

./: README.md  pyproject.toml  setup.cfg  setup.py
astroconst/: __astro.py  __init__.py  aa.py
docs/: astroconst.__astro.rst  astroconst.aa.rst  astroconst.rst  conf.py  index.rst  requirements.txt
