[metadata]
name = astroconst
version = 0.0.8
author = Marc van der Sluys
url = https://github.com/MarcvdSluys/AstroConst
description = A Python package that provides astronomical constants.
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL 1.2
keywords = constants, astronomy, physics, mathematics

# See: https://pypi.org/pypi?:action=list_classifiers
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    numpy
